Tony/nav.css
body {
  margin: 0;
  padding: 0;
  font-family: "Sarabun", sans-serif;
}
#logo {
  font-family: "Sarabun", sans-serif;
  font-weight: 800;
}
nav {
  margin: 0;
}
.bannerImage {
  background-size: cover;
  width: 100%;
  height: 100%;
}
/* Start of nav */
nav a {
  display: flex;
  justify-content: flex-end;
  color: black;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

.navMenu {
  display: flex;
  justify-content: flex-end;
  list-style: none;
  margin: 0;
  padding: 0;
  font-size: 20px;
  height: 80px;
  align-items: center;
  box-shadow: 0 0 10px rgba(128, 162, 213);
}
.navMenu a:hover {
  transform: scale(1.2);
  /* Off white color*/
}
.hero {
  height: 100vh;
  width: 100vw;
  text-align: center;
  vertical-align: middle;
  line-height: 400px;
  background: transparent no-repeat scroll 50% 50%;
  color: white;
  margin: 0;
  font-size: 50px;
  text-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
}

